Bug 492455 - Updateable KNS content not shown on Discover's updates page
Summary: Updateable KNS content not shown on Discover's updates page
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: KNewStuff Backend (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 494449 498902 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-08-31 14:03 UTC by Nate Graham
Modified: 2025-01-21 20:37 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments
KNS content updates shown in GHNS windows, but not Discover's Updates page (1.47 MB, image/png)
2024-08-31 14:03 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2024-08-31 14:03:34 UTC
Created attachment 173167 [details]
KNS content updates shown in GHNS windows, but not Discover's Updates page

Discover no longer appears to show any updateable KNS content on the Updates page. See attached screenshot.

Went through all KNS dialogs I could find in Plasma and found that there was content available for updates in the following categories:
- Plasma widgets
- Color schemes
- Icon themes

None were shown in Discover.

Hard to pinpoint when this broke exactly, but the Updates page definitely used to show upateable KNS content at some point in the recent past. About a year ago on Plasma 5.7.6, Patrick Silva opened a bug report about updateable content being visible but failing to update in Bug 471840.
Comment 1 Nate Graham 2024-10-10 20:13:40 UTC
*** Bug 494449 has been marked as a duplicate of this bug. ***
Comment 2 Harald Sitter 2024-11-15 14:42:33 UTC
Git commit 5007cb10b15407752394ffd74de7d09916162ceb by Harald Sitter.
Committed on 15/11/2024 at 14:35.
Pushed by sitter into branch 'master'.

kns: do not force finish streams that aren't finished

it breaks result streaming. specifically what happened is that the new
kns resultstream tech introduces some delays in the event processing so
results arrive a couple loop cycles later than previously which meant
they would arrive after the (discover-side) stream was already finished
and as such the results just got ignored.

stop finishing streams early. should the backend turn out invalid we'll
finish the stream then (pre-existing code).

M  +0    -1    libdiscover/backends/KNSBackend/KNSBackend.cpp

https://invent.kde.org/plasma/discover/-/commit/5007cb10b15407752394ffd74de7d09916162ceb
Comment 3 Nate Graham 2025-01-21 20:37:44 UTC
*** Bug 498902 has been marked as a duplicate of this bug. ***